--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,12 @@ jobs:
           java-version: "adopt@1.8"
       - name: Coursier cache
         uses: coursier/cache-action@v5
+      - name: postgres
+        uses: harmon758/postgresql-action@v1
+        with:
+          postgresql version: '14'
       - name: Build and Test
         run: |
           cd backend
+          psql -h localhost -c 'create database gpdviz;'
           sbt test
