--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,9 @@ jobs:
       postgres:
         # Docker Hub image
         image: postgres:14
-        # # Provide the password for postgres
-        # env:
-        #   POSTGRES_PASSWORD: postgres
+        # Provide the password for postgres
+        env:
+          POSTGRES_PASSWORD: postgres
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
