--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,12 @@ jobs:
       postgres:
         # Docker Hub image
         image: postgres:14
-        # Provide the password for postgres
         env:
+          POSTGRES_DB: gpdviz_test
+          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
