--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       # Label used to access the service container
       postgres:
         # Docker Hub image
-        image: postgres:14
+        image: postgres:12
         env:
           POSTGRES_DB: gpdviz_test
           POSTGRES_USER: postgres
@@ -42,6 +42,8 @@ jobs:
       - name: Coursier cache
         uses: coursier/cache-action@v5
       - name: Create database, build, and Test
+        env:
+          GPDVIZ_DB_SERVERNAME: postgres
         run: |
           cd backend
           sbt test
