--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "esri-leaflet-vector": "^3.1.1",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "quasar": "^2.0.0",
     "vuex": "^4.0.1"
   },
