--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "esri-leaflet": "^3.0.4",
     "esri-leaflet-vector": "^3.1.1",
+    "highcharts": "6.0.2",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
