--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,15 +20,15 @@
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "quasar": "^2.0.0",
+    "quasar": "^2.4.4",
     "vuex": "^4.0.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
-    "@quasar/app": "^3.0.0",
+    "@quasar/app": "^3.2.6",
     "@types/node": "^12.20.21",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "@typescript-eslint/parser": "5.9.0",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^7.0.0",
