--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "esri-leaflet-vector": "^3.1.1",
     "highcharts": "6.0.2",
     "leaflet": "^1.7.1",
+    "leaflet.gridlayer.googlemutant": "^0.13.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "quasar": "^2.4.4",
