adding highcharts-vue

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "core-js": "^3.6.5",
     "esri-leaflet": "^3.0.4",
     "esri-leaflet-vector": "^3.1.1",
-    "highcharts": "6.0.2",
+    "highcharts": "^9.3.2",
+    "highcharts-vue": "^1.4.0",
     "leaflet": "^1.7.1",
     "leaflet.gridlayer.googlemutant": "^0.13.4",
     "lodash": "^4.17.21",
